# project-mycelium-v2

./: .gitignore  Cargo.toml  Justfile  README.md  build.mill.scala  dagger.json  mill
.dagger/src/: index.ts
.github/workflows/: ci.yaml  main.yaml  rust.yaml
.kiro/hooks/: rust-docs-sync.kiro.hook
.kiro/settings/: mcp.json
app/: README.md  package-lock.json  package.json
app/src/: App.tsx  AuthContext.tsx  Retrieve.tsx  Shell.tsx  api.ts  main.tsx  schemas.ts
app/src-tauri/: tauri.conf.json
app/src/backend-client/: api.ts  base.ts  common.ts  configuration.ts  index.ts
app/src/components/: AreaGraph.tsx  InputField.tsx  PlantCard.tsx  PlantLocation.tsx  PlantProfile.tsx  PlantProfileVariables.tsx  PlantWateringSchedule.tsx  Select.tsx  TertiaryButton.tsx  TextArea.tsx
app/src/pages/: PlantAdd.tsx  PlantAvatarUpload.tsx  PlantEdit.tsx  PlantList.tsx  PlantView.tsx
backend/: .env.sample  .scalafmt.conf  build.sbt  docker-compose.yml
backend-migrations/src/co/mycelium/: MigratorMain.java
backend/.bloop/: backend-test.json  backend.json
backend/deployment/: Chart.yaml  image-tag.yaml  values.yaml
backend/deployment/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  httproute.yaml  secrets.yaml  service.yaml
backend/project/: plugins.sbt  versions.scala
backend/project/.bloop/: backend-build.json
backend/project/project/.bloop/: backend-build-build.json
backend/src/: Main.scala  PooledTransactor.scala  Transactors.scala
backend/src/db/: Repositories.scala
backend/src/domain/: StationMeasurement.scala  codecs.scala
backend/src/endpoints/: Avatar.scala
backend/src/main/resources/migrations/: V1__init.sql  V3__alter_stations.sql  V4__station_profiles.sql
backend/src/main/scala/co/mycelium/: CirceCodecs.scala  Config.scala  Database.scala  Main.scala  OpenApiGenerator.scala  PooledTransactor.scala  Transactors.scala
backend/src/main/scala/co/mycelium/adapters/: ConstantPlantClassifier.scala  ConstantPlantProfiler.scala  OpenAiPlantClassifier.scala  OpenPlantBookPlantProfiler.scala
backend/src/main/scala/co/mycelium/adapters/classifier/: ConstantPlantClassifier.scala  OpenAiPlantClassifier.scala
backend/src/main/scala/co/mycelium/adapters/db/: DoobieRepositories.scala  DoobieStationLogRepository.scala  DoobieStationMeasurementRepository.scala  DoobieStationProfileRepository.scala  DoobieStationRepository.scala  codecs.scala
backend/src/main/scala/co/mycelium/adapters/profiler/: ConstantPlantProfiler.scala  OpenPlantBookPlantProfiler.scala
backend/src/main/scala/co/mycelium/db/: Repositories.scala  StationLogRepository.scala  StationMeasurementRepository.scala  StationRepository.scala  codecs.scala  package.scala
backend/src/main/scala/co/mycelium/domain/: PlantProfile.scala  Station.scala  StationDetails.scala  StationEvent.scala  StationInsert.scala  StationLog.scala  StationMeasurement.scala  StationUpdate.scala  Watering.scala  codecs.scala
backend/src/main/scala/co/mycelium/endpoints/: Auth.scala  Avatar.scala  MyceliumError.scala  Stations.scala
backend/src/main/scala/co/mycelium/ports/: PlantAvatarPlaceHolder.scala  PlantClassifier.scala  PlantProfiler.scala  Repositories.scala
backend/src/main/scala/co/mycelium/service/: StationService.scala
backend/src/test/co/mycelium/db/: DoobieStationRepositoryTest.scala
backend/src/test/scala/co/mycelium/adapters/: OpenAiPlantClassifierTest.scala  OpenPlantBookPlantProfilerTest.scala
backend/src/test/scala/co/mycelium/db/: DoobieResource.scala  DoobieStationMeasurementRepositoryTest.scala  DoobieStationProfileRepositoryTest.scala  DoobieStationRepositoryTest.scala
backend/test/scala/co/mycelium/db/: DoobieStationMeasurementRepositoryTest.scala
current-time/: Cargo.toml
current-time/src/: lib.rs
edge-central/: .env.sample  Cargo.toml  README.md
edge-central/migrations/: 20250716085016_add_measurements_table.sql  20250716141345_add_edge_state.sql
edge-client-backend/: Cargo.toml  README.md
edge-client-backend/.openapi-generator/: FILES
edge-client-backend/docs/: DefaultApi.md  Station.md  StationDetails.md  StationInsert.md  StationLog.md  StationMeasurement.md  StationUpdate.md  Watered.md  Watering.md
edge-client-backend/src/apis/: configuration.rs  default_api.rs
edge-client-backend/src/models/: mod.rs  station.rs  station_details.rs  station_insert.rs  station_log.rs  station_measurement.rs  station_update.rs  watered.rs  watering.rs
edge-peripheral/: Cargo.toml  README.md
edge-peripheral/.cargo/: config.toml
edge-peripheral/src/: anyhow_utils.rs  battery.rs  ble.rs  gauge.rs  main.rs  moisture.rs  types.rs
edge-peripheral2/: Cargo.toml  build.rs
edge-peripheral2/.cargo/: config.toml
edge-peripheral2/src/: battery.rs  ble.rs  gauge.rs  main.rs  moisture.rs  processor.rs  state.rs
edge-peripheral2/src/utils/: mod.rs  rtc.rs
edge-protocol/: Cargo.toml  ble.proto  build.rs
edge-protocol/src/: lib.rs  proto.rs  v2.rs
firmware/: Cargo.toml
firmware/src/: ble.rs  gauge.rs  main.rs
