[package]
edition = "2021"
name    = "edge-central"
version = "0.1.0"

[dependencies]
edge-protocol = { path = "../edge-protocol" }
edge-client-backend = { path = "../edge-client-backend" }
btleplug = "0.11.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.17"
async-stream = "0.3"
rand = "0.9.1"
uuid = "1.17.0"
futures = "0.3.31"
anyhow = "1.0.98"
chrono = "0.4.41"
sqlx = { version = "=0.8.6", features = [ "runtime-tokio", "sqlite", "chrono", "derive", "migrate", "macros" ] }
wifi-rs = "0.2.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4.2"
config = "0.14"
dotenv = "0.15.0"
async-trait = "0.1.88"
aliri_reqwest = "0.5.1"
aliri_tokens = "0.3.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
predicates-core = "1.0.9"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
serial_test = "3.2.0"