[package]
edition = "2021"
name    = "edge-central"
version = "0.1.0"

[dependencies]
edge-protocol = { path = "../edge-protocol" }
edge-client-backend = { path = "../edge-client-backend" }
tokio = { version = "1", features = ["full"] }
rand = { version = "0.8.5", features = ["getrandom"] }
futures = "0.3.31"
anyhow = "1.0.98"
chrono = "0.4.41"
sqlx = { version = "=0.8.6", features = [ "runtime-tokio-rustls", "sqlite", "chrono", "derive", "migrate", "macros" ] }
wifi-rs = "0.2.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
reqwest-middleware = "0.4.2"
config = "0.14"
dotenv = "0.15.0"
async-trait = "0.1.88"
aliri_reqwest = "0.5.1"
aliri_tokens = "0.3.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
predicates-core = "1.0.9"
reqwest-tracing = "0.5.8"
uuid = "1.18.1"

[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
btleplug = "0.11.8"

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
ssd1306 = "0.10.0"
linux-embedded-hal = "0.4.1"
libc = "0.2"
bt-hci = "0.6"
trouble-host = { version = "0.5.1", features = ["scan"] }
embassy-time = { version = "0.5", features = ["std", "generic-queue-8"] }
embassy-futures = { version = "0.1.2" }
tokio-stream = "0.1.17"
env_logger = "0.11"
log = "0.4"
critical-section = { version = "1", features = ["std"] }
embedded-graphics = "0.8.1"
embedded-io = { version = "0.6.1", features = ["std"] }

[dev-dependencies]
serial_test = "3.2.0"
