[package]
name = "edge-peripheral2"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-executor = "0.9.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }
esp-backtrace = { version = "0.18.1", features = [ "panic-handler", "println", "esp32"] }
esp-hal = { version = "1.0.0", features = [ "unstable", "esp32" ] }
esp-alloc = { version = "0.9.0" }
esp-println = { version = "0.16.0", features = ["log-04", "esp32"] }
esp-radio = { version = "0.17.0", features = ["ble", "log-04", "unstable", "esp32"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp-alloc", "esp-radio", "log-04", "esp32"] }
trouble-host = { version = "0.5.1", features = ["default-packet-pool-mtu-255"] }

# for 'ble_bas_peripheral_bonding'
embassy-embedded-hal = "0.5.0"
esp-storage = { version = "0.8.1", features = ["esp32"] }
xtensa-lx = "0.13.0"

[profile.dev]
opt-level = "s"
overflow-checks = false
# lto = 'thin'

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'thin'
opt-level = "s"
overflow-checks = false
