[package]
edition = "2021"
name    = "edge-protocol"
version = "0.1.0"

[dependencies]
bitflags = { version = "2.9.1", features = ["bytemuck"] }
chrono = { version = "0.4.41", default-features = false }
timeseries = { git = "https://github.com/Fristi/timeseries", rev = "869521bb62a99a101e8f0f7d60fadac2a2a046ba" }
micropb = { version = "0.4.1", features = ["container-heapless"] }
trouble-host = "0.5.1"

[build-dependencies]
micropb-gen = "0.4.1"